erDiagram
    USER {
        UUID user_id PK "ユーザーID（UUID）"
        VARCHAR password "ハッシュ化されたパスワード"
        VARCHAR full_name "ユーザー本名"
        VARCHAR nickname "ニックネーム / 表示名"
        VARCHAR email "メールアドレス"
        role VARCHAR "ロール"
    }

    SUBMISSION {
        UUID submission_id PK "投稿ID（UUID）"
        UUID user_id FK "投稿者ユーザーID"
        TEXT text "投稿テキスト"
        TIMESTAMP created_at "投稿日時"
    }

    COMMENT {
        UUID comment_id PK "コメントID（UUID）"
        UUID user_id FK "コメント投稿者ユーザーID"
        UUID submission_id FK "コメント対象の投稿ID"
        TEXT message "コメント本文"
        BOOLEAN isread "確認したかどうか"
        TIMESTAMP created_at "コメント日時"
    }

    CORRECTION {
        UUID correction_id PK "修正ID（UUID）"
        UUID submission_id FK "対象投稿ID"
        TEXT original "原文の修正箇所抜粋"
        TEXT corrected "修正後の文章"
        TEXT reason "修正理由"
        TIMESTAMP created_at "修正日時"
    }

    USER ||--o{ COMMENT : "writes"
    USER ||--o{ SUBMISSION : "creates"
    SUBMISSION ||--o{ COMMENT : "has"
    SUBMISSION ||--o{ CORRECTION : "has"
